[package]
name = "primary_ecu"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
http = "0.2.1"
reqwest = { version ="0.10.4",  features = ["blocking","json"] }
serde = "^1"
serde_derive = "^1"
#ruptane_common = {git = " https://github.com/tstellanova/ruptane_common.git " }
ruptane_common = {path="../ruptane_common"}